# market_regime_detector

./: .gitignore  .vercelignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml
modeling/: README.md  requirements.txt
modeling/src/market_regime_hmm/: __init__.py  cli.py  dashboard.py  data.py  features.py  model.py  pipeline.py  reporting.py  timeframes.py  universe.py
modeling/tests/: test_features.py  test_regimes.py
public/: manifest.json
public/reports/tables/: 000300_SS_1d_model_selection.csv  000300_SS_1d_regime_stats.csv  BTC-USD_1d_model_selection.csv  BTC-USD_1d_regime_stats.csv  BTC-USD_1d_strategy_by_regime.csv  BTC-USD_1h_model_selection.csv  BTC-USD_1wk_regime_stats.csv  BTC-USD_1wk_strategy_by_regime.csv  (+17 more)
reports/tables/: 000300_SS_1d_strategy_by_regime.csv  000300_SS_1d_transition_matrix.csv  BTC-USD_15m_model_selection.csv  BTC-USD_15m_regime_stats.csv  BTC-USD_15m_strategy_by_regime.csv  BTC-USD_15m_transition_matrix.csv  BTC-USD_1d_transition_matrix.csv  BTC-USD_1h_regime_stats.csv  BTC-USD_1h_strategy_by_regime.csv  BTC-USD_1h_transition_matrix.csv  BTC-USD_1wk_model_selection.csv  BTC-USD_1wk_transition_matrix.csv  ETH-USD_1d_model_selection.csv  ETH-USD_1d_regime_stats.csv  ETH-USD_1d_strategy_by_regime.csv  GSPC_1d_model_selection.csv  GSPC_1d_transition_matrix.csv  HSI_1d_strategy_by_regime.csv  SSMI_1d_transition_matrix.csv
scripts/: build_static_site.mjs  create_german_handout_pdf.py  export_static_dashboard.py
src/market_regime_hmm/: regimes.py  strategy.py
web/: main.js  styles.css
